fix grid layout issues

--- a/src/mobyle2/core/static/css/grid.css
+++ b/src/mobyle2/core/static/css/grid.css
@@ -240,3 +240,10 @@ body {
 .clearfix {
   zoom: 1;
 }
+
+div.right-slot {
+  margin-left:10px;
+}
+
+
+
